--- a/examples/ex1.html
+++ b/examples/ex1.html
@@ -17,10 +17,14 @@ h4 makes a small hed
 </h4>
 
 <h5>
-h5 heds are the smallest
+h5 heds are tiny
 </h5>
 
-<p>p tags wrap around paragraphs. Most HTML tags require both an opening and a closing tag.</p>
+<h6>
+h6 heds are the tiniest
+</h6>
+
+<p>p tags wrap around paragraphs. Most HTML tags require both an opening and a closing tag.s</p>
 
 <p>
 <strong>This text is bold.</strong>
@@ -32,6 +36,10 @@ h5 heds are the smallest
 
 <p>
 <code>This text looks like code.</code>
+</p>
+
+<p>
+<small>This text is small.</small>
 </p>
 
 <p>
