--- a/examples/ex1.html
+++ b/examples/ex1.html
@@ -24,7 +24,7 @@ h5 heds are tiny
 h6 heds are the tiniest
 </h6>
 
-<p>p tags wrap around paragraphs. Most HTML tags require both an opening and a closing tag.s</p>
+<p>p tags wrap around paragraphs. Most HTML tags require both an opening and a closing tag.</p>
 
 <p>
 <strong>This text is bold.</strong>
