--- a/examples/ex1.html
+++ b/examples/ex1.html
@@ -46,6 +46,22 @@ h6 heds are the tiniest
 Use an a tag to create a hyperlink. <a href="http://www.omaha.com">This text links to omaha.com.</a>
 </p>
 
+<p>Here is a numbered ("ordered") list:</p>
+
+<ol>
+<li>First item</li>
+<li>Second item</li>
+<li>Third item</li>
+</ol>
+
+<p>Here is a bulleted ("unordered") list:</p>
+
+<ul>
+<li>First item</li>
+<li>Second item</li>
+<li>Third item</li>
+</ul>
+
 <p>A horizontal rule:</p>
 
 <hr>
