--- a/examples/ex3.html
+++ b/examples/ex3.html
@@ -10,6 +10,8 @@
     <link href="http://dataomaha.com/media/scripts/bootstrap/3.0.3/css/bootstrap.css" rel="stylesheet">
 
     </head>
+
+<!-- This is how you make a comment in HTML -->
     
     <body>
 
